--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1", features = ["full"] }
 mongodb = "2.4.0"
 futures = "0.3.28"
 serde = "1.0.160"
+rocket = "=0.5.0-rc.3"
 
 [dependencies.uuid]
 version = "1.3.0"
